# pyawamer

./: .gitignore  LICENSE  README.md  pyproject.toml
src/awamer/: command.py  pwd.py  uname.py
tests/: test_pwd.py  test_uname.py
