[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "awamer"
version = "0.0.1"
authors = [
  { name="Mustafa Hasan", email="strukt93@gmail.com" },
]
description = "A Python library to modularize *nix CLI commands."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/strukt93/pyawamer"
Issues = "https://github.com/strukt93/pyawamer/issues"